--- a/LAUREN.html
+++ b/LAUREN.html
@@ -428,7 +428,7 @@
                         <td>
                             <div class="team-info">
                                 <span class="rank">1</span>
-                                <div class="team-icon"></div>
+                                <img src="https://ibb.co.com/vWGnWQs" alt="ONIC" class="team-logo">
                                 <span>ONIC</span>
                             </div>
                         </td>
@@ -550,4 +550,5 @@
         *Tiga posisi terbawah tidak lolos ke babak playoffs
     </div>
 </body>
+
 </html>
