--- a/LAUREN.html
+++ b/LAUREN.html
@@ -428,7 +428,7 @@
                         <td>
                             <div class="team-info">
                                 <span class="rank">1</span>
-                                <img src="https://ibb.co.com/vWGnWQs" alt="ONIC" class="team-logo">
+                                <img src="https://i.ibb.co.com/kTfCT93/onic.png" alt="ONIC" class="team-logo">
                                 <span>ONIC</span>
                             </div>
                         </td>
@@ -552,3 +552,4 @@
 </body>
 
 </html>
+
