--- a/LAUREN.html
+++ b/LAUREN.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M7 Akan Hadir di Jakarta</title>
+    <title>M7 AKAN HADIR DI RUMAH SUPLING</title>
     <style>
         * {
             margin: 0;
@@ -533,7 +533,7 @@
                             <div class="team-info">
                                 <span class="rank">9</span>
                                 <div class="team-icon"></div>
-                                <span>TEAM LIQUID ID</span>
+                                <span>SUPLING MANTAP</span>
                             </div>
                         </td>
                         <td class="center red-text">4</td>
@@ -552,4 +552,5 @@
 </body>
 
 </html>
+
 
